--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,17 @@
 # production
 /build
 
+/api/venv
+
+/api/.vscode
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
